--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,11 +5,11 @@ on: [push, workflow_dispatch]
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-vlouvens
-  LOCATION: westus
+  RESOURCE-GROUP: rg-eshoponweb-az400
+  LOCATION: eastus
   TEMPLATE-FILE: infra/webapp.bicep
-  SUBSCRIPTION-ID: 5bfc57ca-711d-40ac-97d9-9eb7ee3db5e8
-  WEBAPP-NAME: eshoponweb-webapp-vlouvens
+  SUBSCRIPTION-ID: 7330d96e-d0d9-4fa9-9da6-ec6482236e85
+  WEBAPP-NAME: eShopOnWebApp
 
 
 jobs:
